--- a/notebooks/run_query_py.ipynb
+++ b/notebooks/run_query_py.ipynb
@@ -68,9 +68,11 @@
    "outputs": [],
    "source": [
     "# Build sql statement\n",
+    "# fetchsize requires Databricks Runtime 16.1 or above. SQL warehouses must be Pro or Serverless and must use 2024.50.\n",
+    "# https://docs.databricks.com/aws/en/query-federation/performance-recommendations\n",
     "qry = f\"\"\"\\\n",
     "    insert into {tgt_catalog}.{tgt_schema}.{tgt_table}\n",
-    "    select * from {src_catalog}.{src_schema}.{src_table}\n",
+    "    select * from {src_catalog}.{src_schema}.{src_table} with ('fetchsize' 100000)\n",
     "    where {where_clause}\n",
     "\"\"\"\n",
     "\n",
