--- a/notebooks/config.ipynb
+++ b/notebooks/config.ipynb
@@ -200,18 +200,18 @@
    },
    "outputs": [],
    "source": [
-    "# Get distinct list of batch_ids\n",
-    "batch_list_qry = f\"\"\"\\\n",
-    "    select array_agg(distinct batch_id) as batch_list\n",
+    "# Get list of ids\n",
+    "id_list_qry = f\"\"\"\\\n",
+    "    select array_agg(id) as ids\n",
     "    from {partitions_tbl}\n",
     "\"\"\"\n",
     "\n",
-    "batch_list = spark.sql(batch_list_qry).collect()[0][0]\n",
-    "batch_list.sort()\n",
-    "print(f'batch_list: {batch_list}')\n",
+    "id_list = spark.sql(id_list_qry).collect()[0][0]\n",
+    "id_list.sort()\n",
+    "print(f'Count of ids: {len(id_list)}')\n",
     "\n",
-    "# Assign batch list to job task value. The lvl1 job iterates over the batches.\n",
-    "dbutils.jobs.taskValues.set(key=\"batch_list\", value=batch_list)"
+    "# Assign id list to job task value to make it available to a for each task.\n",
+    "dbutils.jobs.taskValues.set(key=\"id_list\", value=id_list)"
    ]
   },
   {
