33 integrate partitioned ingest job with control table (#34)

--- a/src/lakefed_ingest/config_ingest_partitioned.ipynb
+++ b/src/lakefed_ingest/config_ingest_partitioned.ipynb
@@ -195,7 +195,7 @@
      "nuid": "8aad25ce-35d6-4a1d-8366-1578bc1097b6",
      "showTitle": true,
      "tableResultSettingsMap": {},
-     "title": "Get Batch List"
+     "title": "Get List of Partitions"
     }
    },
    "outputs": [],
@@ -213,35 +213,6 @@
     "# Assign id list to job task value to make it available to a for each task.\n",
     "dbutils.jobs.taskValues.set(key=\"id_list\", value=id_list)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "644aea83-f729-47ed-bb5c-a99ca7789c6c",
-     "showTitle": true,
-     "tableResultSettingsMap": {},
-     "title": "Create Target Table"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "sql_ddl = get_sql_ddl(\n",
-    "    catalog=tgt_catalog,\n",
-    "    schema=tgt_schema,\n",
-    "    table=tgt_table,\n",
-    "    cluster_col=partition_col,\n",
-    "    root_dir=root_dir,\n",
-    "    file_path=file_path,\n",
-    ")\n",
-    "\n",
-    "print(f'Create target table DDL statement:\\n{sql_ddl}')\n",
-    "\n",
-    "spark.sql(sql_ddl)"
-   ]
   }
  ],
  "metadata": {
@@ -249,6 +220,7 @@
    "computePreferences": null,
    "dashboards": [],
    "environmentMetadata": null,
+   "inputWidgetPreferences": null,
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
@@ -259,7 +231,7 @@
     },
     "pythonIndentUnit": 4
    },
-   "notebookName": "config",
+   "notebookName": "config_ingest_partitioned",
    "widgets": {}
   },
   "kernelspec": {
