--- a/src/lakefed_ingest/copy_data_partitioned.ipynb
+++ b/src/lakefed_ingest/copy_data_partitioned.ipynb
@@ -25,24 +25,16 @@
     "set var where_clause = (\n",
     "    select where_clause\n",
     "    from identifier(:tgt_catalog || '.' || :tgt_schema || '.' || :tgt_table || '_partitions')\n",
-    "    where id = :task_id\n",
+    "    where id = :partition_id\n",
     ");\n",
     "\n",
     "-- Build query string using parameters and where_clause variable\n",
     "set var qry_str = \n",
-    "    \"insert into identifier(:tgt_catalog || '.' || :tgt_schema || '.' || :tgt_table) \"\n",
-    "    \"select * from identifier(:src_catalog || '.' || :src_schema || '.' || :src_table) with(fetchSize = 100000)\"\n",
-    "    \"where \" || where_clause;\n",
+    "    'insert into ' || :tgt_catalog || '.' || :tgt_schema || '.' || :tgt_table || ' ' ||\n",
+    "    'select * from ' || :src_catalog || '.' || :src_schema || '.' || :src_table || ' ' ||\n",
+    "    'with(fetchSize = 100000) where ' || where_clause;\n",
     "\n",
-    "execute immediate qry_str\n",
-    "using (\n",
-    "    :tgt_catalog AS tgt_catalog,\n",
-    "    :tgt_schema AS tgt_schema,\n",
-    "    :tgt_table AS tgt_table,\n",
-    "    :src_catalog AS src_catalog,\n",
-    "    :src_schema AS src_schema,\n",
-    "    :src_table AS src_table\n",
-    ");"
+    "execute immediate qry_str;"
    ]
   }
  ],
@@ -57,11 +49,11 @@
    "notebookName": "run_query",
    "widgets": {
     "src_catalog": {
-     "currentValue": "lakefed_bulk_ingest_src",
+     "currentValue": "lakefed_ingest_src",
      "nuid": "16550e43-9cac-466c-881b-b63bf83b204d",
      "typedWidgetInfo": {
       "autoCreated": false,
-      "defaultValue": "lakefed_bulk_ingest_src",
+      "defaultValue": "lakefed_ingest_src",
       "label": "",
       "name": "src_catalog",
       "options": {
@@ -71,7 +63,7 @@
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "defaultValue": "lakefed_bulk_ingest_src",
+      "defaultValue": "lakefed_ingest_src",
       "label": "",
       "name": "src_catalog",
       "options": {
@@ -161,11 +153,11 @@
      }
     },
     "tgt_catalog": {
-     "currentValue": "lakefed_bulk_ingest",
+     "currentValue": "lakefed_ingest",
      "nuid": "1c76fe80-4fb5-494a-94be-ddc36b14a319",
      "typedWidgetInfo": {
       "autoCreated": false,
-      "defaultValue": "lakefed_bulk_ingest",
+      "defaultValue": "lakefed_ingest",
       "label": "",
       "name": "tgt_catalog",
       "options": {
@@ -175,7 +167,7 @@
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "defaultValue": "lakefed_bulk_ingest",
+      "defaultValue": "lakefed_ingest",
       "label": "",
       "name": "tgt_catalog",
       "options": {
