Organize and update jobs (#37)

--- a/notebooks/load_metadata_tpcds.ipynb
+++ b/notebooks/load_metadata_tpcds.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "1841e07b-d30a-4e77-a511-28376c365b1b",
      "showTitle": false,
@@ -15,7 +18,7 @@
    "source": [
     "## Load Metadata - TPCDS\n",
     "- Prepare metadata and merge into the control table\n",
-    "- Copies from Delta to Delta for integration testing"
+    "- Clone notebook for each source schema"
    ]
   },
   {
@@ -28,36 +31,33 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "c1f77de2-5a27-4986-9a83-10b0b4fe833d",
-     "showTitle": true,
+     "nuid": "b0440ec6-c1c6-4bf3-97c0-78f1d410b189",
+     "showTitle": false,
      "tableResultSettingsMap": {},
-     "title": "Get Table Sizes & Clustering Columns"
+     "title": ""
     }
    },
    "outputs": [],
    "source": [
-    "%python\n",
-    "catalog = dbutils.widgets.get('src_catalog')\n",
-    "schema = dbutils.widgets.get('src_schema')\n",
+    "-- Create temporary view containing table specific metadata\n",
+    "-- This will be joined with data from information_schema\n",
     "\n",
-    "spark.sql(f'use catalog {catalog}')\n",
-    "\n",
-    "table_list = [row.tableName for row in spark.sql(f\"SHOW TABLES IN {schema}\").collect()]\n",
-    "\n",
-    "results = []\n",
-    "for table in table_list:\n",
-    "    df = spark.sql(f\"DESCRIBE DETAIL {schema}.{table}\")\n",
-    "    size = df.select(\"sizeInBytes\").collect()[0][0]\n",
-    "    cluster_cols = df.select(\"clusteringColumns\").collect()[0][0]\n",
-    "    results.append({\n",
-    "        \"catalog\": catalog,\n",
-    "        \"schema\": schema,\n",
-    "        \"table\": table,\n",
-    "        \"size_mb\": int(size / (1024 * 1024)),\n",
-    "        \"cluster_cols\": cluster_cols\n",
-    "    })\n",
-    "\n",
-    "spark.createDataFrame(results).createOrReplaceTempView('table_details')"
+    "create or replace temp view table_details as\n",
+    "select\n",
+    "  col1 as table,\n",
+    "  if(col2 = \"y\", true, false) as load_partitioned,\n",
+    "  split(col3, ',') as cluster_cols\n",
+    "FROM\n",
+    "  (\n",
+    "    VALUES\n",
+    "      (\"catalog_returns\", \"y\", \"cr_returned_date_sk\"),\n",
+    "      (\"catalog_sales\",   \"y\", \"cs_sold_date_sk\"),\n",
+    "      (\"inventory\",       \"y\", \"inv_date_sk\"),\n",
+    "      (\"store_returns\",   \"y\", \"sr_returned_date_sk\"),\n",
+    "      (\"store_sales\",     \"y\", \"ss_sold_date_sk\"),\n",
+    "      (\"web_returns\",     \"y\", \"wr_returned_date_sk\"),\n",
+    "      (\"web_sales\",       \"y\", \"ws_sold_date_sk\")\n",
+    "  );"
    ]
   },
   {
@@ -84,13 +84,7 @@
     "create or replace temporary view control_src as\n",
     "select\n",
     "  'lakefed_ingest' as job_name,\n",
-    "  -- Partitioned loads can have a large number of queries\n",
-    "  -- Use a unique task_collection name & run them sequentially to avoid excessive concurrency \n",
-    "  case\n",
-    "    when array_size(cluster_cols) > 0 then\n",
-    "      concat('tpcds_', t.table_name)\n",
-    "    else 'tpcds'\n",
-    "  end as task_collection,\n",
+    "  'tpcds' as task_collection,\n",
     "  'delta' as src_type,\n",
     "  t.table_catalog as src_catalog,\n",
     "  t.table_schema as src_schema,\n",
@@ -98,9 +92,9 @@
     "  'lakefed_ingest' as sink_catalog,\n",
     "  'tpcds_sf1000' as sink_schema,\n",
     "  t.table_name as sink_table,\n",
-    "  d.cluster_cols as sink_cluster_cols,\n",
+    "  coalesce(d.cluster_cols, array()) as sink_cluster_cols,\n",
     "  'full' as load_type,\n",
-    "  case when array_size(cluster_cols) > 0 then true else false end as load_partitioned,\n",
+    "  coalesce(d.load_partitioned, false) as load_partitioned,\n",
     "  '*' as select_list,\n",
     "  null as watermark_col_name,\n",
     "  null as watermark_col_type,\n",
@@ -111,8 +105,8 @@
     "from tpcds.information_schema.tables t\n",
     "left join table_details d\n",
     "on t.table_name = d.table\n",
-    "where t.table_schema = 'sf_1000_liquid'\n",
-    "  and t.table_catalog = 'tpcds';"
+    "where t.table_catalog = 'tpcds'\n",
+    "  and t.table_schema = 'sf_1000_liquid';"
    ]
   },
   {
@@ -187,21 +181,21 @@
       "label": "",
       "name": "catalog",
       "options": {
-       "validationRegex": null,
-       "widgetDisplayType": "Text"
+       "widgetDisplayType": "Text",
+       "validationRegex": null
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
+      "widgetType": "text",
       "defaultValue": "lakefed_ingest",
       "label": "",
       "name": "catalog",
       "options": {
+       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null,
-       "widgetType": "text"
-      },
-      "widgetType": "text"
+       "validationRegex": null
+      }
      }
     },
     "schema": {
@@ -213,21 +207,21 @@
       "label": "",
       "name": "schema",
       "options": {
-       "validationRegex": null,
-       "widgetDisplayType": "Text"
+       "widgetDisplayType": "Text",
+       "validationRegex": null
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
+      "widgetType": "text",
       "defaultValue": "default",
       "label": "",
       "name": "schema",
       "options": {
+       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null,
-       "widgetType": "text"
-      },
-      "widgetType": "text"
+       "validationRegex": null
+      }
      }
     },
     "src_catalog": {
@@ -239,21 +233,21 @@
       "label": "",
       "name": "src_catalog",
       "options": {
-       "validationRegex": null,
-       "widgetDisplayType": "Text"
+       "widgetDisplayType": "Text",
+       "validationRegex": null
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
+      "widgetType": "text",
       "defaultValue": "tpcds",
       "label": "",
       "name": "src_catalog",
       "options": {
+       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null,
-       "widgetType": "text"
-      },
-      "widgetType": "text"
+       "validationRegex": null
+      }
      }
     },
     "src_schema": {
@@ -265,21 +259,21 @@
       "label": "",
       "name": "src_schema",
       "options": {
-       "validationRegex": null,
-       "widgetDisplayType": "Text"
+       "widgetDisplayType": "Text",
+       "validationRegex": null
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
+      "widgetType": "text",
       "defaultValue": "sf_1000_liquid",
       "label": "",
       "name": "src_schema",
       "options": {
+       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null,
-       "widgetType": "text"
-      },
-      "widgetType": "text"
+       "validationRegex": null
+      }
      }
     },
     "table": {
@@ -291,21 +285,21 @@
       "label": "",
       "name": "table",
       "options": {
-       "validationRegex": null,
-       "widgetDisplayType": "Text"
+       "widgetDisplayType": "Text",
+       "validationRegex": null
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
+      "widgetType": "text",
       "defaultValue": "control",
       "label": "",
       "name": "table",
       "options": {
+       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null,
-       "widgetType": "text"
-      },
-      "widgetType": "text"
+       "validationRegex": null
+      }
      }
     }
    }
