--- a/src/lakefed_ingest/get_partitions.ipynb
+++ b/src/lakefed_ingest/get_partitions.ipynb
@@ -46,8 +46,6 @@
     "dbutils.widgets.text(\"src_schema\", \"\", \"03 Source Schema\")\n",
     "dbutils.widgets.text(\"src_table\", \"\", \"04 Source Table\")\n",
     "dbutils.widgets.text(\"root_dir\", \"\", \"05 Root directory for project files\")\n",
-    "dbutils.widgets.text('tgt_ddl_file_path', '', '06 Create target DDL file path')\n",
-    "dbutils.widgets.text(\"jdbc_config_file\", \"\", \"07 Source Table\")\n",
     "dbutils.widgets.text(\"partition_col\", \"\", \"08 Source Partition Column\")\n",
     "dbutils.widgets.text(\"partition_size_mb\", \"\", \"09 Partition Size MB\")\n",
     "dbutils.widgets.text(\"tgt_catalog\", \"\", \"10 Target Catalog\")\n",
@@ -77,16 +75,11 @@
     "src_catalog = dbutils.widgets.get('src_catalog')\n",
     "src_schema = dbutils.widgets.get('src_schema')\n",
     "src_table = dbutils.widgets.get('src_table')\n",
-    "root_dir = dbutils.widgets.get('root_dir')\n",
-    "file_path = dbutils.widgets.get('tgt_ddl_file_path')\n",
-    "jdbc_config_file = dbutils.widgets.get('jdbc_config_file')\n",
     "partition_col = dbutils.widgets.get('partition_col')\n",
     "partition_size_mb = int(dbutils.widgets.get('partition_size_mb'))\n",
     "tgt_catalog = dbutils.widgets.get('tgt_catalog')\n",
     "tgt_schema = dbutils.widgets.get('tgt_schema')\n",
-    "tgt_table = dbutils.widgets.get('tgt_table')\n",
-    "\n",
-    "jdbc_config_file = None if jdbc_config_file == '' else jdbc_config_file"
+    "tgt_table = dbutils.widgets.get('tgt_table')"
    ]
   },
   {
@@ -106,7 +99,7 @@
    "source": [
     "# Get size of source table. Table size and the specified partition size\n",
     "# are used to calculate the approximate size of each individual query.\n",
-    "table_size_mb = get_table_size(src_catalog, src_schema, src_table, src_type, root_dir, jdbc_config_file)"
+    "table_size_mb = get_table_size(src_catalog, src_schema, src_table, src_type)"
    ]
   },
   {
@@ -231,7 +224,7 @@
     },
     "pythonIndentUnit": 4
    },
-   "notebookName": "config_ingest_partitioned",
+   "notebookName": "get_partitions",
    "widgets": {}
   },
   "kernelspec": {
