--- a/notebooks/_create_control_table.ipynb
+++ b/notebooks/_create_control_table.ipynb
@@ -16,61 +16,7 @@
      "title": "Create Control Table"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style scoped>\n",
-       "  .table-result-container {\n",
-       "    max-height: 300px;\n",
-       "    overflow: auto;\n",
-       "  }\n",
-       "  table, th, td {\n",
-       "    border: 1px solid black;\n",
-       "    border-collapse: collapse;\n",
-       "  }\n",
-       "  th, td {\n",
-       "    padding: 5px;\n",
-       "  }\n",
-       "  th {\n",
-       "    text-align: left;\n",
-       "  }\n",
-       "</style><div class='table-result-container'><table class='table-result'><thead style='background-color: white'><tr></tr></thead><tbody></tbody></table></div>"
-      ]
-     },
-     "metadata": {
-      "application/vnd.databricks.v1+output": {
-       "addedWidgets": {},
-       "aggData": [],
-       "aggError": "",
-       "aggOverflow": false,
-       "aggSchema": [],
-       "aggSeriesLimitReached": false,
-       "aggType": "",
-       "arguments": {},
-       "columnCustomDisplayInfos": {},
-       "data": [],
-       "datasetInfos": [],
-       "dbfsResultPath": null,
-       "isJsonSchema": true,
-       "metadata": {},
-       "overflow": false,
-       "plotOptions": {
-        "customPlotOptions": {},
-        "displayType": "table",
-        "pivotAggregation": null,
-        "pivotColumns": null,
-        "xColumns": null,
-        "yColumns": null
-       },
-       "removedWidgets": [],
-       "schema": [],
-       "type": "table"
-      }
-     },
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "use catalog identifier(:catalog);\n",
     "use schema identifier(:schema);\n",
@@ -86,6 +32,7 @@
     "  sink_catalog string not null comment 'Name of the sink catalog',\n",
     "  sink_schema string not null comment 'Name of the sink schema.',\n",
     "  sink_table string not null comment 'Name of the sink table.',\n",
+    "  primary_key array<string> not null comment 'Array of columns used as the primary key.',\n",
     "  sink_cluster_cols array<string> comment 'Array of columns used for Liquid Clustering',\n",
     "  load_type string not null comment 'Specified is load is full or incremental.',\n",
     "  load_partitioned boolean comment 'Specifies if load is partitioned or not.',\n",
@@ -102,7 +49,13 @@
     "alter table identifier(:table) add constraint valid_load_type check (load_type in ('full', 'incremental'));\n",
     "\n",
     "alter table identifier(:table) drop constraint if exists valid_src_type;\n",
-    "alter table identifier(:table) add constraint valid_src_type check (src_type in ('sqlserver', 'oracle', 'postgresql', 'redshift', 'synapse', 'delta'));"
+    "alter table identifier(:table) add constraint valid_src_type check (src_type in ('sqlserver', 'oracle', 'postgresql', 'redshift', 'synapse', 'delta'));\n",
+    "\n",
+    "-- Ensure incremental tasks have required metadata\n",
+    "alter table identifier(:table) drop constraint if exists valid_incremental_metadata;\n",
+    "alter table identifier(:table) add constraint valid_incremental_metadata check (\n",
+    "  (load_type = 'incremental' and array_size(primary_key) > 0 and watermark_col_name is not null and watermark_col_type is not null and watermark_col_start_value is not null) or (load_type = 'full' and array_size(primary_key) = 0 and watermark_col_name is null and watermark_col_type is null and watermark_col_start_value is null)\n",
+    ");"
    ]
   }
  ],
@@ -113,8 +66,10 @@
    "environmentMetadata": null,
    "inputWidgetPreferences": null,
    "language": "sql",
-   "notebookMetadata": {},
-   "notebookName": "config_metadata_tpcds",
+   "notebookMetadata": {
+    "pythonIndentUnit": 2
+   },
+   "notebookName": "_create_control_table",
    "widgets": {
     "catalog": {
      "currentValue": "lakefed_ingest",
@@ -125,21 +80,21 @@
       "label": "",
       "name": "catalog",
       "options": {
-       "validationRegex": null,
-       "widgetDisplayType": "Text"
+       "widgetDisplayType": "Text",
+       "validationRegex": null
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
+      "widgetType": "text",
       "defaultValue": "lakefed_ingest",
       "label": "",
       "name": "catalog",
       "options": {
+       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null,
-       "widgetType": "text"
-      },
-      "widgetType": "text"
+       "validationRegex": null
+      }
      }
     },
     "schema": {
@@ -151,21 +106,21 @@
       "label": "",
       "name": "schema",
       "options": {
-       "validationRegex": null,
-       "widgetDisplayType": "Text"
+       "widgetDisplayType": "Text",
+       "validationRegex": null
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
+      "widgetType": "text",
       "defaultValue": "default",
       "label": "",
       "name": "schema",
       "options": {
+       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null,
-       "widgetType": "text"
-      },
-      "widgetType": "text"
+       "validationRegex": null
+      }
      }
     },
     "table": {
@@ -177,21 +132,21 @@
       "label": "",
       "name": "table",
       "options": {
-       "validationRegex": null,
-       "widgetDisplayType": "Text"
+       "widgetDisplayType": "Text",
+       "validationRegex": null
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
+      "widgetType": "text",
       "defaultValue": "control",
       "label": "",
       "name": "table",
       "options": {
+       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null,
-       "widgetType": "text"
-      },
-      "widgetType": "text"
+       "validationRegex": null
+      }
      }
     }
    }
