Enable Iceberg Reads

--- a/notebooks/_create_control_table.ipynb
+++ b/notebooks/_create_control_table.ipynb
@@ -10,6 +10,27 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "cef8d7ce-09a4-4b72-b837-6f983fd57084",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "Create Catalog"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "create catalog if not exists identifier(:ctrl_catalog);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "05d63317-6929-44ed-a5b6-7097a9a265b5",
      "showTitle": true,
      "tableResultSettingsMap": {},
@@ -18,10 +39,10 @@
    },
    "outputs": [],
    "source": [
-    "use catalog identifier(:catalog);\n",
-    "use schema identifier(:schema);\n",
+    "use catalog identifier(:ctrl_catalog);\n",
+    "use schema identifier(:ctrl_schema);\n",
     "\n",
-    "create table if not exists identifier(:table) (\n",
+    "create table if not exists identifier(:ctrl_table) (\n",
     "  id bigint generated always as identity,\n",
     "  job_name string not null comment 'Name of the job used to run the task.',\n",
     "  task_collection string not null comment 'Used to group tasks into collections.',\n",
@@ -32,6 +53,7 @@
     "  sink_catalog string not null comment 'Name of the sink catalog',\n",
     "  sink_schema string not null comment 'Name of the sink schema.',\n",
     "  sink_table string not null comment 'Name of the sink table.',\n",
+    "  enable_iceberg_reads boolean not null comment 'Flag used to enable or disable Iceberg reads on the sink table.',\n",
     "  primary_key array<string> not null comment 'Array of columns used as the primary key.',\n",
     "  sink_cluster_cols array<string> comment 'Array of columns used for Liquid Clustering',\n",
     "  load_type string not null comment 'Specified is load is full or incremental.',\n",
@@ -45,15 +67,15 @@
     "  task_enabled boolean not null comment 'Flag used to enable or disable the task.'\n",
     ");\n",
     "\n",
-    "alter table identifier(:table) drop constraint if exists valid_load_type;\n",
-    "alter table identifier(:table) add constraint valid_load_type check (load_type in ('full', 'incremental'));\n",
+    "alter table identifier(:ctrl_table) drop constraint if exists valid_load_type;\n",
+    "alter table identifier(:ctrl_table) add constraint valid_load_type check (load_type in ('full', 'incremental'));\n",
     "\n",
-    "alter table identifier(:table) drop constraint if exists valid_src_type;\n",
-    "alter table identifier(:table) add constraint valid_src_type check (src_type in ('sqlserver', 'oracle', 'postgresql', 'redshift', 'synapse', 'delta'));\n",
+    "alter table identifier(:ctrl_table) drop constraint if exists valid_src_type;\n",
+    "alter table identifier(:ctrl_table) add constraint valid_src_type check (src_type in ('sqlserver', 'oracle', 'postgresql', 'redshift', 'synapse', 'delta'));\n",
     "\n",
     "-- Ensure incremental tasks have required metadata\n",
-    "alter table identifier(:table) drop constraint if exists valid_incremental_metadata;\n",
-    "alter table identifier(:table) add constraint valid_incremental_metadata check (\n",
+    "alter table identifier(:ctrl_table) drop constraint if exists valid_incremental_metadata;\n",
+    "alter table identifier(:ctrl_table) add constraint valid_incremental_metadata check (\n",
     "  (load_type = 'incremental' and array_size(primary_key) > 0 and watermark_col_name is not null and watermark_col_type is not null and watermark_col_start_value is not null) or (load_type = 'full' and array_size(primary_key) = 0 and watermark_col_name is null and watermark_col_type is null and watermark_col_start_value is null)\n",
     ");"
    ]
@@ -71,14 +93,14 @@
    },
    "notebookName": "_create_control_table",
    "widgets": {
-    "catalog": {
+    "ctrl_catalog": {
      "currentValue": "lakefed_ingest",
      "nuid": "afad7900-cc45-4ad9-af7e-f6e4631270b4",
      "typedWidgetInfo": {
       "autoCreated": false,
       "defaultValue": "lakefed_ingest",
       "label": "",
-      "name": "catalog",
+      "name": "ctrl_catalog",
       "options": {
        "widgetDisplayType": "Text",
        "validationRegex": null
@@ -89,7 +111,7 @@
       "widgetType": "text",
       "defaultValue": "lakefed_ingest",
       "label": "",
-      "name": "catalog",
+      "name": "ctrl_catalog",
       "options": {
        "widgetType": "text",
        "autoCreated": false,
@@ -97,14 +119,14 @@
       }
      }
     },
-    "schema": {
+    "ctrl_schema": {
      "currentValue": "default",
      "nuid": "56b300ff-0480-44b2-85f1-e4d722e21ffe",
      "typedWidgetInfo": {
       "autoCreated": false,
       "defaultValue": "default",
       "label": "",
-      "name": "schema",
+      "name": "ctrl_schema",
       "options": {
        "widgetDisplayType": "Text",
        "validationRegex": null
@@ -115,7 +137,7 @@
       "widgetType": "text",
       "defaultValue": "default",
       "label": "",
-      "name": "schema",
+      "name": "ctrl_schema",
       "options": {
        "widgetType": "text",
        "autoCreated": false,
@@ -123,14 +145,14 @@
       }
      }
     },
-    "table": {
+    "ctrl_table": {
      "currentValue": "control",
      "nuid": "4c818e34-b32e-48f2-b6de-bb9c82d3839d",
      "typedWidgetInfo": {
       "autoCreated": false,
       "defaultValue": "control",
       "label": "",
-      "name": "table",
+      "name": "ctrl_table",
       "options": {
        "widgetDisplayType": "Text",
        "validationRegex": null
@@ -141,7 +163,7 @@
       "widgetType": "text",
       "defaultValue": "control",
       "label": "",
-      "name": "table",
+      "name": "ctrl_table",
       "options": {
        "widgetType": "text",
        "autoCreated": false,
