--- a/src/lakefed_ingest/create_sink_table.ipynb
+++ b/src/lakefed_ingest/create_sink_table.ipynb
@@ -5,7 +5,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "670af4b3-92ae-4498-932f-ab3aa6e936f9",
      "showTitle": false,
@@ -36,7 +39,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "234ff50f-ff4e-49cc-9cd7-2dd381a49c92",
      "showTitle": false,
@@ -57,6 +63,48 @@
     "  end if;\n",
     "end"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "fa61ec84-9f95-4b2a-8b09-d8a787175dc3",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "-- Enable Iceberg reads\n",
+    "-- https://docs.databricks.com/aws/en/delta/uniform#enable-iceberg-reads-on-an-existing-table\n",
+    "begin\n",
+    "  declare qry_str string;\n",
+    "  declare enable_iceberg_reads boolean;\n",
+    "  set enable_iceberg_reads = cast(:enable_iceberg_reads as boolean);\n",
+    "\n",
+    "  if enable_iceberg_reads is true then\n",
+    "    -- Disable deletion vectors\n",
+    "    set qry_str =\n",
+    "      'alter table ' || :tgt_catalog || '.' || :tgt_schema || '.' || :tgt_table || ' set tblproperties(\\'delta.enableDeletionVectors\\' = false);';\n",
+    "    execute immediate qry_str;\n",
+    "    \n",
+    "    -- Enable Iceberg reads\n",
+    "    set qry_str = \n",
+    "      'alter table ' || :tgt_catalog || '.' || :tgt_schema || '.' || :tgt_table || ' set tblproperties('\n",
+    "        '\\'delta.columnMapping.mode\\' = \\'name\\','\n",
+    "        '\\'delta.enableIcebergCompatV2\\' = \\'true\\','\n",
+    "        '\\'delta.universalFormat.enabledFormats\\' = \\'iceberg\\')';\n",
+    "    execute immediate qry_str;\n",
+    "  end if;\n",
+    "end"
+   ]
   }
  ],
  "metadata": {
@@ -69,9 +117,246 @@
    },
    "inputWidgetPreferences": null,
    "language": "sql",
-   "notebookMetadata": {},
+   "notebookMetadata": {
+    "pythonIndentUnit": 2
+   },
    "notebookName": "create_sink_table",
-   "widgets": {}
+   "widgets": {
+    "enable_iceberg_reads": {
+     "currentValue": "true",
+     "nuid": "791e9bfb-389d-490f-9b27-87378d5b905b",
+     "typedWidgetInfo": {
+      "autoCreated": true,
+      "defaultValue": "",
+      "label": null,
+      "name": "enable_iceberg_reads",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "",
+      "label": null,
+      "name": "enable_iceberg_reads",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": true,
+       "validationRegex": null
+      }
+     }
+    },
+    "select_list": {
+     "currentValue": "*",
+     "nuid": "7b4252cd-e1f6-4019-98d4-e2717edff799",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "*",
+      "label": "",
+      "name": "select_list",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "*",
+      "label": "",
+      "name": "select_list",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": false,
+       "validationRegex": null
+      }
+     }
+    },
+    "sink_cluster_cols": {
+     "currentValue": "",
+     "nuid": "f286c608-634a-4b6f-aa8d-d74960b8b137",
+     "typedWidgetInfo": {
+      "autoCreated": true,
+      "defaultValue": "",
+      "label": null,
+      "name": "sink_cluster_cols",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "",
+      "label": null,
+      "name": "sink_cluster_cols",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": true,
+       "validationRegex": null
+      }
+     }
+    },
+    "src_catalog": {
+     "currentValue": "",
+     "nuid": "5b9234b8-c78f-4b6d-a4c0-56db43e24cdf",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "",
+      "label": "",
+      "name": "src_catalog",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "",
+      "label": "",
+      "name": "src_catalog",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": false,
+       "validationRegex": null
+      }
+     }
+    },
+    "src_schema": {
+     "currentValue": "",
+     "nuid": "4399d18d-c127-4e40-9d24-910e9477383d",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "",
+      "label": "",
+      "name": "src_schema",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "",
+      "label": "",
+      "name": "src_schema",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": false,
+       "validationRegex": null
+      }
+     }
+    },
+    "src_table": {
+     "currentValue": "",
+     "nuid": "fc1577b0-b79c-4a26-9d06-78af5a61df34",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "",
+      "label": "",
+      "name": "src_table",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "",
+      "label": "",
+      "name": "src_table",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": false,
+       "validationRegex": null
+      }
+     }
+    },
+    "tgt_catalog": {
+     "currentValue": "",
+     "nuid": "403c40e4-c660-433e-97d1-db78d7ac5836",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "",
+      "label": "",
+      "name": "tgt_catalog",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "",
+      "label": "",
+      "name": "tgt_catalog",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": false,
+       "validationRegex": null
+      }
+     }
+    },
+    "tgt_schema": {
+     "currentValue": "",
+     "nuid": "f216f52d-8da5-4533-9ae5-12a68116b9d7",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "",
+      "label": "",
+      "name": "tgt_schema",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "",
+      "label": "",
+      "name": "tgt_schema",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": false,
+       "validationRegex": null
+      }
+     }
+    },
+    "tgt_table": {
+     "currentValue": "",
+     "nuid": "600447ea-a194-4a81-a518-498ff71a8f76",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "",
+      "label": "",
+      "name": "tgt_table",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "",
+      "label": "",
+      "name": "tgt_table",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": false,
+       "validationRegex": null
+      }
+     }
+    }
+   }
   },
   "language_info": {
    "name": "sql"
