--- a/notebooks/load_metadata_tpcds.ipynb
+++ b/notebooks/load_metadata_tpcds.ipynb
@@ -52,7 +52,7 @@
     "    VALUES\n",
     "      (\"catalog_returns\", \"y\", \"cr_returned_date_sk\"),\n",
     "      (\"catalog_sales\",   \"y\", \"cs_sold_date_sk\"),\n",
-    "      (\"inventory\",       \"y\", \"inv_date_sk\"),\n",
+    "      (\"inventory\",       \"y\", \"inv_item_sk\"),\n",
     "      (\"store_returns\",   \"y\", \"sr_returned_date_sk\"),\n",
     "      (\"store_sales\",     \"y\", \"ss_sold_date_sk\"),\n",
     "      (\"web_returns\",     \"y\", \"wr_returned_date_sk\"),\n",
@@ -85,13 +85,14 @@
     "select\n",
     "  'lakefed_ingest' as job_name,\n",
     "  'tpcds' as task_collection,\n",
-    "  'delta' as src_type,\n",
+    "  'sqlserver' as src_type,\n",
     "  t.table_catalog as src_catalog,\n",
     "  t.table_schema as src_schema,\n",
     "  t.table_name as src_table,\n",
     "  'lakefed_ingest' as sink_catalog,\n",
     "  'tpcds_sf1000' as sink_schema,\n",
     "  t.table_name as sink_table,\n",
+    "  False as enable_iceberg_reads,\n",
     "  array() as primary_key,\n",
     "  coalesce(d.cluster_cols, array()) as sink_cluster_cols,\n",
     "  'full' as load_type,\n",
@@ -101,33 +102,14 @@
     "  null as watermark_col_type,\n",
     "  null as watermark_col_start_value,\n",
     "  case when load_partitioned is true then element_at(cluster_cols, 1) else null end as partition_col,\n",
-    "  case when load_partitioned is true then 256 else null end as partition_size_mb,\n",
+    "  case when load_partitioned is true then 2048 else null end as partition_size_mb,\n",
     "  true as task_enabled\n",
     "from tpcds.information_schema.tables t\n",
     "left join table_details d\n",
     "on t.table_name = d.table\n",
     "where t.table_catalog = 'tpcds'\n",
-    "  and t.table_schema = 'sf_1000_liquid';"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "0d76fe75-0923-4d8f-8bc8-6737ba7c730c",
-     "showTitle": true,
-     "tableResultSettingsMap": {},
-     "title": "View Metadata"
-    }
-   },
-   "outputs": [],
-   "source": [
+    "  and t.table_schema = 'sf_1000_liquid';\n",
+    "\n",
     "select * from control_src"
    ]
   },
@@ -182,21 +164,21 @@
       "label": "",
       "name": "catalog",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "lakefed_ingest",
       "label": "",
       "name": "catalog",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "schema": {
@@ -208,21 +190,21 @@
       "label": "",
       "name": "schema",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "default",
       "label": "",
       "name": "schema",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "src_catalog": {
@@ -234,21 +216,21 @@
       "label": "",
       "name": "src_catalog",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "tpcds",
       "label": "",
       "name": "src_catalog",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "src_schema": {
@@ -260,21 +242,21 @@
       "label": "",
       "name": "src_schema",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "sf_1000_liquid",
       "label": "",
       "name": "src_schema",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "table": {
@@ -286,21 +268,21 @@
       "label": "",
       "name": "table",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "control",
       "label": "",
       "name": "table",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     }
    }
