Change partition_size_mb to 2048 in load_metadata_system_tables notebook

--- a/notebooks/load_metadata_system_tables.ipynb
+++ b/notebooks/load_metadata_system_tables.ipynb
@@ -101,7 +101,7 @@
     "  coalesce(d.watermark_col_type, null) as watermark_col_type,\n",
     "  coalesce(d.watermark_col_start_value, null) as watermark_col_start_value,\n",
     "  case when load_partitioned is true then element_at(cluster_cols, 1) else null end as partition_col,\n",
-    "  case when load_partitioned is true then 256 else null end as partition_size_mb,\n",
+    "  case when load_partitioned is true then 2048 else null end as partition_size_mb,\n",
     "  true as task_enabled\n",
     "from system.information_schema.tables t\n",
     "left join table_details d\n",
@@ -167,21 +167,21 @@
       "label": "",
       "name": "ctrl_catalog",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "lakefed_ingest",
       "label": "",
       "name": "ctrl_catalog",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "ctrl_schema": {
@@ -193,21 +193,21 @@
       "label": "",
       "name": "ctrl_schema",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "default",
       "label": "",
       "name": "ctrl_schema",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "ctrl_table": {
@@ -219,21 +219,21 @@
       "label": "",
       "name": "ctrl_table",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "control",
       "label": "",
       "name": "ctrl_table",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "src_catalog": {
@@ -245,21 +245,21 @@
       "label": "",
       "name": "src_catalog",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "tpcds",
       "label": "",
       "name": "src_catalog",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "src_schema": {
@@ -271,21 +271,21 @@
       "label": "",
       "name": "src_schema",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "sf_1000_liquid",
       "label": "",
       "name": "src_schema",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     }
    }
